--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "vite": "^5.1.4",
-    "tailwindcss": "^3.3.2",
+    "@vitejs/plugin-react": "^4.5.0",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.14"
+    "tailwindcss": "^3.3.2",
+    "vite": "^6.3.5"
   }
 }
